// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      &lt;title&gt;Sign Up&lt;/title&gt;&lt;subtitle&gt;to join the conversation&lt;/subtitle&gt;
    </Bar>
  </Localized>
  <SubBar>
    <Localized
      button={
        <withPropsOnChange(Button)
          color="primary"
          id="signUp-gotoSignInButton"
          onClick={[Function]}
          size="small"
          variant="underlined"
        />
      }
      id="signUp-accountAvailableSignIn"
    >
      <withPropsOnChange(Typography)
        container={[Function]}
        variant="bodyCopy"
      >
        Already have an account? &lt;button&gt;Sign In&lt;/button&gt;
      </withPropsOnChange(Typography)>
    </Localized>
  </SubBar>
  <Main>
    <withPropsOnChange(HorizontalGutter)
      size="oneAndAHalf"
    >
      <withContext(createMutationContainer(SignUpContainer)) />
      <OrSeparator />
      <withPropsOnChange(HorizontalGutter)>
        <SignUpWithFacebookContainer />
        <SignUpWithGoogleContainer />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </withPropsOnChange(HorizontalGutter)>
    </withPropsOnChange(HorizontalGutter)>
  </Main>
</div>
`;

exports[`renders without email sign up 1`] = `
<div>
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      &lt;title&gt;Sign Up&lt;/title&gt;&lt;subtitle&gt;to join the conversation&lt;/subtitle&gt;
    </Bar>
  </Localized>
  <SubBar>
    <Localized
      button={
        <withPropsOnChange(Button)
          color="primary"
          id="signUp-gotoSignInButton"
          onClick={[Function]}
          size="small"
          variant="underlined"
        />
      }
      id="signUp-accountAvailableSignIn"
    >
      <withPropsOnChange(Typography)
        container={[Function]}
        variant="bodyCopy"
      >
        Already have an account? &lt;button&gt;Sign In&lt;/button&gt;
      </withPropsOnChange(Typography)>
    </Localized>
  </SubBar>
  <Main>
    <withPropsOnChange(HorizontalGutter)
      size="oneAndAHalf"
    >
      <withPropsOnChange(HorizontalGutter)>
        <SignUpWithFacebookContainer />
        <SignUpWithGoogleContainer />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </withPropsOnChange(HorizontalGutter)>
    </withPropsOnChange(HorizontalGutter)>
  </Main>
</div>
`;
